fix - side nav disappearing on small screen

--- a/portfolio-app/src/components/side-nav/SideNav.css
+++ b/portfolio-app/src/components/side-nav/SideNav.css
@@ -59,3 +59,7 @@
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
 }
+
+@media screen and (max-width: 650px) {
+    .sidenav {display: none;}
+}
